# User-Interfaces-Group-Project

./: .gitignore  CMakeLists.txt  README.md  dataset.cpp  model.cpp  model.hpp  runner.sh  sample.cpp  sample.hpp  window.cpp  window.hpp
include/: POPcard.hpp  POPpage.hpp  dataset.hpp  homepage.hpp  litterpage.hpp  model.hpp  overviewcard.hpp  overviewpage.hpp  quake.hpp  sample.hpp  samplespage.hpp  window.hpp
src/: dataset.cpp  homepage.cpp  main.cpp  model.cpp  overviewpage.cpp  quake.cpp  sample.cpp  samplespage.cpp  stats.cpp  window.cpp
src/cards/: POPcard.cpp  overviewcard.cpp
src/pages/: POPpage.cpp  homepage.cpp  litterpage.cpp  overviewpage.cpp  samplespage.cpp
